<resources>
    <string name="app_name">TipTop</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Continue</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="please_enter_details_to_register">Please enter details to register</string>
    <string name="birthday">Birthday</string>
    <string name="enter_family_id">Enter family ID</string>
    <string name="click_here">Click here</string>
    <string name="want_to_create_a_new_family_id">Want to create a new family ID?</string>
    <string name="sign_up">Sign Up</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="attach_a_photo">Attach a photo</string>
    <string name="route_type">Route type:</string>
    <string name="route_information">Route information</string>
    <string name="name">Name</string>
    <string name="family_name">Family name</string>
    <string name="spinnerTitle">TipTop</string>
    <string name="spinnerChildTitle">TipTop</string>
    <string name="circle_information">family information</string>
    <string name="circle_s_you_belong_to">family(s) you belong to</string>
    <string name="edit_my_profile">EDIT MY PROFILE</string>
    <string name="manage_circles">manage families</string>
    <string name="name_of_task">Name of task</string>
    <string name="bonus_point">Bonus point</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="create_a_child_account">Create a child account</string>
    <string name="username">Username</string>
    <string name="enter_email_or_username">Enter Email or Username</string>
    <string name="task_assignment">Task assignment:</string>
    <string name="parent_members">Parent members</string>
    <string name="parents_have_full_control_of_the_aplication_and_can_manage_the_members_of_the_circle">Parents have full control of the aplication and can manage the members of the family</string>
    <string name="child_members">Child members</string>
    <string name="infoParentSpinner">infoParentSpinner</string>
    <string name="titleParentSpinner">titleParentSpinner</string>
    <string name="the_amount_of_points_you_have_earned_is">The amount of points you have earned is</string>
    <string name="well_done">Well done!</string>
    <string name="update">update</string>

    <string-array name="Route">
        <item>With bonuses</item>
        <item>Without bonuses</item>
    </string-array>

    <string-array name="CircleInformation">
        <item>Members</item>
        <item>parent rights</item>
    </string-array>

</resources>