<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/familyName"
            android:hint="@string/family_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/attach_a_photo"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/attach_a_photo"
            android:textColor="@color/black"
            android:textStyle="bold|italic"/>

        <ImageButton
            android:id="@+id/newImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/new_family"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"/>

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/route_type"
            android:textColor="@color/black"
            android:textStyle="bold|italic"/>

        <Spinner
            android:id="@+id/route_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/route_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/route_information"
            android:textColor="@color/black"
            android:background="@color/whitePurple"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="Finish"
            android:layout_centerHorizontal="true"/>

    </LinearLayout>

</RelativeLayout>