<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/familyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="20dp"/>

    <LinearLayout

        android:id="@+id/parentMembers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="16dp"
            android:textColor="@android:color/black"
            android:text="@string/parent_members"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/black"
            android:text="@string/parents_have_full_control_of_the_aplication_and_can_manage_the_members_of_the_circle"/>

    </LinearLayout>

    <LinearLayout

        android:id="@+id/childMembers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="16dp"
            android:textColor="@android:color/black"
            android:text="@string/child_members"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/black"
            android:text="Children's permissions, i.e. can not add and change tasks.
They see only their tasks."/>

    </LinearLayout>


</LinearLayout>