<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fillViewport="true">
    <LinearLayout

        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="50dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/AddTask"
            android:text="Add Task:"
            android:textColor="#070707"
            android:textSize="32dp"
            android:textStyle="bold|italic"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/NameOfTask"
                android:hint="@string/name_of_task"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/StartDateTV"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_date"
                    android:paddingLeft="12dp"/>

                <Button
                    android:id="@+id/StartDateButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:textColor="@android:color/black"
                    android:text="Select a Date"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/EndDateTV"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/end_date"
                    android:paddingLeft="12dp"/>

                <Button
                    android:id="@+id/EndDateButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:textColor="@android:color/black"
                    android:text="Select a Date"/>

            </LinearLayout>

            <TextView
                android:id="@+id/TaskAssignment"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/task_assignment"
                android:layout_marginTop="20dp"
                android:paddingLeft="12dp"/>

            <ListView
                android:id="@+id/ListOfChildren"
                android:layout_width="wrap_content"
                android:layout_height="150dp"/>

            <ImageButton
                android:id="@+id/AddPic"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_gravity="left"
                android:text="Add a Picture"
                android:layout_marginTop="30dp"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:id="@+id/Description"
                android:hint="Description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/SubmitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Submit Task" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>