<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="Register"/>
        <TextView
            android:id="@+id/secondTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="Please enter details to register"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:id="@+id/newEmail"
            android:hint="@string/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newPassword"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmPassword"
            android:hint="@string/confirm_password"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/birthday"
            android:hint="Birthday"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textSpinner" />

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/next"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/already_have_an_account"/>

        <TextView
            android:id="@+id/login"
            android:layout_width="42dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/login"
            android:textStyle="bold|italic" />

    </LinearLayout>

</LinearLayout>















        <!--<?xml version="1.0" encoding="utf-8"?>-->
        <!--<RelativeLayout-->
        <!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--    android:layout_width="match_parent"-->
        <!--    android:layout_height="match_parent">-->
        <!--    <TextView-->
        <!--        android:id="@+id/title"-->
        <!--        android:layout_width="fill_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_marginTop="100dp"-->
        <!--        android:gravity="left"-->
        <!--        android:textSize="40sp"-->
        <!--        android:text="Register"/>-->
        <!--    <TextView-->
        <!--        android:id="@+id/secondTitle"-->
        <!--        android:layout_width="fill_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:gravity="left"-->
        <!--        android:textSize="18sp"-->
        <!--        android:layout_below="@+id/title"-->
        <!--        android:text="Please enter details to register"/>-->
        <!--    <EditText-->
        <!--        android:id="@+id/newEmail"-->
        <!--        android:layout_width="fill_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_marginTop="200dp"-->
        <!--        android:gravity="left"-->
        <!--        android:text="Email"/>-->
        <!--    <EditText-->
        <!--        android:id="@+id/newPassword"-->
        <!--        android:layout_width="fill_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:gravity="left"-->
        <!--        android:layout_below="@+id/newEmail"-->
        <!--        android:layout_marginTop="20dp"-->
        <!--        android:text="Password"/>-->
        <!--    <EditText-->
        <!--        android:id="@+id/confirmPassword"-->
        <!--        android:layout_width="fill_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:gravity="left"-->
        <!--        android:layout_below="@+id/newPassword"-->
        <!--        android:layout_marginTop="20dp"-->
        <!--        android:text="Confirm Password"/>-->
        <!--    <EditText-->
        <!--        android:id="@+id/birthday"-->
        <!--        android:layout_width="fill_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:gravity="left"-->
        <!--        android:layout_below="@+id/confirmPassword"-->
        <!--        android:layout_marginTop="20dp"-->
        <!--        android:text="Birthday"/>-->
        <!--    <TextView-->
        <!--        android:id="@+id/textSpinner"-->
        <!--        android:layout_width="fill_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:gravity="left"-->
        <!--        android:layout_below="@+id/birthday"-->
        <!--        android:layout_marginTop="20dp"-->
        <!--        android:text="Tipe"/>-->
        <!--    <Spinner-->
        <!--        android:id="@+id/spinner"-->
        <!--        android:layout_width="200dp"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_alignBottom="@+id/textSpinner"-->
        <!--        android:layout_below="@+id/birthday"-->
        <!--        android:gravity="left"-->
        <!--        android:layout_marginLeft="50dp" />-->
        <!--    <Button-->
        <!--        android:id="@+id/next"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_centerHorizontal="true"-->
        <!--        android:layout_below="@+id/confirmPassword"-->
        <!--        android:layout_marginTop="200dp"-->
        <!--        android:text="Continue"/>-->
        <!--    <Button-->
        <!--        android:id="@+id/haveAccount"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_centerHorizontal="true"-->
        <!--        android:layout_below="@+id/next"-->
        <!--        android:text="already have an account? login"/>-->
        <!--</RelativeLayout>-->